als edits per M Kenney

--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -50,85 +50,29 @@ body { padding-top: 100px; }
 <div class="col-md-12 col-sm-12">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h4 class="panel-title">Turn the room on <span class="glyphicon glyphicon-off pull-right"></span></h4>
+      <h4 class="panel-title">Turn room on, Display Video Source</h4>
     </div>
       <div class="panel-body">
         <ol>
           <li>Touch the control panel to activate it.</li>
           <li>Choose a presentation source from the options shown at the bottom of the control touch panel. Swipe left or right to show more options.</li>
-          <li>Drag your selected source to the display(s) to start the projection system. 
-          <li>If control panel does not respond to your touch, try again, but more slowly. Tap and hold for 3 seconds.
+          <li>Drag your selected source to the display(s) to start display it.</li>
+          <li>If you're using a laptop or external source, connect it now.</li>
           <li>A different source may be shown on any display.<br>
-          (<mark>NOTE</mark>: Controls for some devices, e.g. document camera and Apple TV, may be accessed using the icon in the lower left corner of the control panel).</li>
-          <li>To show the same source on all displays, drag the source to the "all displays" target.
-          <li>To turn the room off, find the control labelled Quit/Shutdown and drag it to "all displays".
-          <li>Call the ITS Service Desk at (216) 368-<strong>HELP</strong> (4357) if you need additional help.
+          <mark>NOTE</mark>: Controls for some devices, e.g. document camera and Apple TV, may be accessed using the icon in the lower left corner of the control panel).</li>
+          <li>To show the same source on all displays, drag the source to the "all displays" target.</li>
+          <li>If control panel does not respond to your touch, try again, but more slowly. Tap and hold for 3 seconds.</li>
+          <li>To turn the room off, find the control labelled Quit/Shutdown and drag it to "all displays".</li>
+          <li>Call the ITS Service Desk at (216) 368-<strong>HELP</strong> (4357) if you need additional help.</li>
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-              <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204-power.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
+              <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
          </ol>
       </div>
     </div>
 </div>
 </div>  
-
-<div class="row">
-<div class="col-md-12 col-sm-12">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a onclick="toggle_visibility('present');">
-          Prep for presentation <span class="glyphicon glyphicon-blackboard pull-right"></span>
-        </a>
-      </h4>
-    </div>
-      <div id="present" class="panel-body" style="display:none">
-        <ol>
-          <li>Choose a presentation source from the options shown at the bottom of the control touch panel.</li>
-          <li>Swipe left or right to show more options.</li>
-          <li>If you're using a laptop or external source, connect it now.</li>
-          <li>Drag your selected source to the front display(s) to start the projection system.
-          <p>&nbsp;</p>
-          <p><strong>NOTE:</strong> Projector screen is represented at the <strong>top</strong> of the control panel and distinguished by the label "main" (main left and main right for rooms with dual projection).</p>
-          <p>&nbsp;</p>
-            <div class="row">
-            <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-              <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
-          <li>Optionally, to set a presenter monitor, drag your presentation source to a pod at the bottom and center of control touch panel. Make sure that to face the selected pod toward the front of the room.
-          <p>Call the ITS Service Desk at (216) 368<strong>HELP</strong> (4357) if you need help repositioning equipment.</p></li>
-        </ol>
-      </div>
-    </div>
-</div>
-</div>
-
-<div class="row">
-<div class="col-md-12 col-sm-12">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a onclick="toggle_visibility('share');">
-          Share your content <span class="glyphicon glyphicon-share pull-right"></span>
-        </a>
-      </h4>
-    </div>
-      <div id="share" class="panel-body" style="display:none">
-        <ol>
-          <li>Choose a presentation source from the options shown at the bottom of the control touch panel.</li>
-          <li>Swipe left or right to show more options.</li>
-          <li>Touch the device name to select it, then drag it to the station where you want it to display.
-          <p>&nbsp;</p>
-            <div class="row">
-            <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-              <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204-assign-all.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
-          <li>To assign a source to all pods simultaneously, drag to source to the box labelled <STRONG>ALL PODS</STRONG>.</li>
-          <li>To assign a source to all pods simultaneously and also display the same on the front projection screen(s), drag the source to the box labelled <strong>ALL DISPLAYS</strong>.</li>
-        </ol>
-      </div>
-    </div>
-</div>
-</div>
 
 
 <h3>More Help</h3>
