als edits per M Kenney

--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -54,21 +54,23 @@ body { padding-top: 100px; }
     </div>
       <div class="panel-body">
         <ol>
-          <li>Touch the control panel to activate it.</li>
-          <li>Choose a presentation source from the options shown at the bottom of the control touch panel. Swipe left or right to show more options.</li>
-          <li>Drag your selected source to the display(s) to start display it.</li>
-          <li>If you're using a laptop or external source, connect it now.</li>
-          <li>A different source may be shown on any display.<br>
-          <mark>NOTE</mark>: Controls for some devices, e.g. document camera and Apple TV, may be accessed using the icon in the lower left corner of the control panel).</li>
-          <li>To show the same source on all displays, drag the source to the "all displays" target.</li>
+          <li><strong>Touch</strong> the control panel to activate it.</li>
+          <li>Choose a presentation source from the options shown at the bottom of the control touch panel.<br>Swipe left or right to show more options.</li>
+          <li>If you're using a laptop or other external source, connect it now.</li>
+          <li>Drag your selected source to a display(s) to show it there.
+            <div class="well">  
+            <mark>NOTE</mark>
+            <p>A different source may be shown on any display. To show the same source on all displays, drag the source to the "all displays" target.</p>
+            <p>Controls for some devices, e.g. document camera and Apple TV, may be accessed using the icon in the lower left corner of the control panel).</p>
+            </div> 
+          </li>
           <li>If control panel does not respond to your touch, try again, but more slowly. Tap and hold for 3 seconds.</li>
           <li>To turn the room off, find the control labelled Quit/Shutdown and drag it to "all displays".</li>
-          <li>Call the ITS Service Desk at (216) 368-<strong>HELP</strong> (4357) if you need additional help.</li>
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
               <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
-         </ol>
+        </ol>
       </div>
     </div>
 </div>
