--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -58,6 +58,7 @@ body { padding-top: 100px; }
           <li>Choose a presentation source from the options shown at the bottom of the control touch panel.<br>Swipe left or right to show more options.</li>
           <li>If you're using a laptop or other external source, connect it now.</li>
           <li>Drag your selected source to a display(s) to show it there.
+            <p>&nbsp;</p>
             <div class="well">  
             <mark>NOTE</mark>
             <p>A different source may be shown on any display. To show the same source on all displays, drag the source to the "all displays" target.</p>
