als edits per M Kenney

--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -60,8 +60,7 @@ body { padding-top: 100px; }
           <li>Drag your selected source to a display(s) to show it there.
             <p>&nbsp;</p>
             <div class="well">  
-            <mark>NOTE</mark>
-            <p>A different source may be shown on any display. To show the same source on all displays, drag the source to the "all displays" target.</p>
+            <p><mark>NOTE:</mark> A different source may be shown on any display. To show the same source on all displays, drag the source to the "all displays" target.</p>
             <p>Controls for some devices, e.g. document camera and Apple TV, may be accessed using the icon in the lower left corner of the control panel).</p>
             </div> 
           </li>
