als edits per M Kenney

--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -65,7 +65,7 @@ body { padding-top: 100px; }
             </div> 
           </li>
           <li>If control panel does not respond to your touch, try again, but more slowly. Tap and hold for 3 seconds.</li>
-          <li>To turn the room off, find the control labelled Quit/Shutdown and drag it to "all displays".</li>
+          <li>To turn the room off, find the control labelled <strong>Quit/Shutdown</strong> and drag it to "all displays".</li>
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
