--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -55,7 +55,7 @@ body { padding-top: 100px; }
       <div class="panel-body">
         <ol>
           <li><strong>Touch</strong> the control panel to activate it.</li>
-          <li>Choose a presentation source from the options shown at the bottom of the control touch panel.<br>Swipe left or right to show more options.</li>
+          <li>Choose a <strong>presentation source</strong> from the options shown at the bottom of the control touch panel.<br>Swipe left or right to show more options.</li>
           <li>If you're using a laptop or other external source, connect it now.</li>
           <li>Drag your selected source to a display(s) to show it there.
             <p>&nbsp;</p>
@@ -64,7 +64,7 @@ body { padding-top: 100px; }
             <p>Controls for some devices, e.g. document camera and Apple TV, may be accessed using the icon in the lower left corner of the control panel).</p>
             </div> 
           </li>
-          <li>If control panel does not respond to your touch, try again, but more slowly. Tap and hold for 3 seconds.</li>
+          <li>If the control panel does not respond to your touch, try again, but more slowly. <strong>Tap and hold</strong> for 3 seconds.</li>
           <li>To turn the room off, find the control labelled <strong>Quit/Shutdown</strong> and drag it to "all displays".</li>
           <p>&nbsp;</p>
             <div class="row">
