--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -50,13 +50,13 @@ body { padding-top: 100px; }
 <div class="col-md-12 col-sm-12">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h4 class="panel-title">Turn room on, Display Video Source</h4>
+      <h4 class="panel-title">Core Concepts - Video Input Control</h4>
     </div>
       <div class="panel-body">
         <ol>
+          <li>If you're using a laptop or other external source, connect it now.</li>
           <li><strong>Touch</strong> the control panel to activate it.</li>
           <li>Choose a <strong>presentation source</strong> from the options shown at the bottom of the control touch panel.<br>Swipe left or right to show more options.</li>
-          <li>If you're using a laptop or other external source, connect it now.</li>
           <li>Drag your selected source to a display(s) to show it there.
             <p>&nbsp;</p>
             <div class="well">  
