--- a/scripts/sis-mobile-draft.html
+++ b/scripts/sis-mobile-draft.html
@@ -40,9 +40,9 @@ SIS; SIS mobile; Mobile application; Registration; Registrar; SIS REG; Student i
   <dt>What is the SIS Mobile URL?</dt>
   <dd><a href="sismobile.case.edu">sismobile.case.edu</a></dd>
   <dt>What mobile platforms can I use SIS Mobile on?</dt>
-  <dd>SIS Mobile is platform-agnostic. Any mobile device (phone, tablet) with access to the internet and a browser application is compatible.</dd>
+  <dd>SIS Mobile is platform-agnostic.<br>Any mobile device (phone, tablet) with access to the internet and a browser application is compatible.</dd>
   <dt>What information can I see with SIS Mobile?</dt>
-  <dd>Screens are 'view-only' for the 1st phase of the project. Users can see class schedules, academic history, billing information, etc.</dd>
+  <dd>Screens are 'view-only' for the 1st phase of the project.<br>Users can see class schedules, academic history, billing information, etc.</dd>
   <dt>When can I edit or update my information using SIS Mobile?</dt>
   <dd>Additional announcements will be made when SIS Mobile is ready to be transitioned from view-only to interactive mode.</dd>
 </dl>
