sis mobile update

--- a/scripts/sis-mobile-draft.html
+++ b/scripts/sis-mobile-draft.html
@@ -23,11 +23,11 @@ h3 { padding-top: 20px; }
 <p><strong>Keywords</strong><br>
 SIS; SIS mobile; Mobile application; Registration; Registrar; SIS REG; Student information</p>
 
-<h1>SIS Mobile Application<br><small>Soft Launch Announcement</small></h1>
+<h1>SIS Mobile Application</h1>
 <p>Using SIS Mobile, students are able to view grades, academic schedules, billing information and more on their mobile phone or tablet.</p>
 <p>The service desk should assign any questions concerning the product to the <strong>SIS Reg</strong> resolver group.</p>
 
-<h2>Public Announcement text</h2>
+<h2>Public Announcement</h2>
 <div class="well">
 <p>We are excited to announce that we have implemented the HighPoint mobile solution for the Student Information System.  As many of you know we have been looking for a mobile solution for a while and with the support of ITS and the entire ERP Team we were able to move forward.</p>  
 <p>This will be a phased implementation with the first phase being a soft roll out with view only screens for the Fall semester.  A more detailed roll out schedule will be shared shortly.</p>
