--- a/scripts/sis-mobile-draft.html
+++ b/scripts/sis-mobile-draft.html
@@ -39,8 +39,8 @@ SIS; SIS mobile; Mobile application; Registration; Registrar; SIS REG; Student i
   <dd>August 12, 2015<br>&nbsp;</dd>
   <dt>What is the SIS Mobile URL?</dt>
   <dd><a href="sismobile.case.edu">sismobile.case.edu</a><br>&nbsp;</dd>
-  <dt>What mobile platforms can I use SIS Mobile on?</dt>
-  <dd>SIS Mobile is platform-agnostic.<br>Any mobile device (phone, tablet) with access to the internet and a browser application is compatible.<br>&nbsp;</dd>
+  <dt>What mobile platforms can I use with SIS Mobile?</dt>
+  <dd>SIS Mobile is platform-agnostic.<br>Any internet-connected mobile device (phone, tablet) with a browser is compatible.<br>&nbsp;</dd>
   <dt>What information can I see with SIS Mobile?</dt>
   <dd>Screens are 'view-only' for the 1st phase of the project.<br>Users can see class schedules, academic history, billing information, etc.<br>&nbsp;</dd>
   <dt>When can I edit or update my information using SIS Mobile?</dt>
