sis mobile update

--- a/scripts/sis-mobile-draft.html
+++ b/scripts/sis-mobile-draft.html
@@ -25,7 +25,7 @@ SIS; SIS mobile; Mobile application; Registration; Registrar; SIS REG; Student i
 
 <h1>SIS Mobile Application</h1>
 <p>Using SIS Mobile, students are able to view grades, academic schedules, billing information and more on their mobile phone or tablet.</p>
-<p>The service desk should assign any questions concerning the product to the <strong>SIS Reg</strong> resolver group.</p>
+<p>The service desk should assign any questions concerning the product to the <strong>Peoplesoft SIS-Reg</strong> resolver group.</p>
 
 <h2>Public Announcement</h2>
 <div class="well">
@@ -36,7 +36,7 @@ SIS; SIS mobile; Mobile application; Registration; Registrar; SIS REG; Student i
 <h2>Frequently Asked Questions</h2>
 <dl>
   <dt>When will SIS Mobile available?</dt>
-  <dd>August 12, 2015<br>&nbsp;</dd>
+  <dd>August 10, 2015<br>&nbsp;</dd>
   <dt>What is the SIS Mobile URL?</dt>
   <dd><a href="sismobile.case.edu">sismobile.case.edu</a><br>&nbsp;</dd>
   <dt>What mobile platforms can I use with SIS Mobile?</dt>
