--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -61,11 +61,10 @@ body { padding-top: 100px; }
             <p>&nbsp;</p>
             <div class="well">  
             <p><mark>NOTE:</mark> A different source may be shown on any display. To show the same source on all displays, drag the source to the "all displays" target.</p>
-            <p>Controls for some devices, e.g. document camera and Apple TV, may be accessed using the icon in the lower left corner of the control panel).</p>
+            <p>Controls for some devices, e.g. document camera and Apple TV, may be accessed using the icon in the lower left corner of the control panel.</p>
             </div> 
           </li>
-          <li>If the control panel does not respond to your touch, try again, but more slowly. <strong>Tap and hold</strong> for 3 seconds.</li>
-          <li>To turn the room off, find the control labelled <strong>Quit/Shutdown</strong> and drag it to "all displays".</li>
+          <li>To turn the room off, find the control labeled <strong>Quit/Shutdown</strong> and drag it to "all displays".</li>
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
@@ -81,7 +80,7 @@ body { padding-top: 100px; }
 
 <div id="advanced" class="row">
 <div class="col-md-12 col-sm-12">
-<p>Call the ITS Service Desk at <a href="tel:216-368-4357"><strong>(216) 368-4357</strong> (click to call)</a> for more help. A white service phone is mounted to the presenter's station for your convenience.</p>
+<p>Call the ITS Service Desk at <a href="tel:216-368-4357"><strong>(216) 368-4357</strong></a> for more help. A white service phone is mounted to the presenter's station for your convenience.</p>
 <p>Learn more about <a href="https://www.case.edu/its/academic-technology/"><strong>ITS Academic Technologies</strong></a> and its institutional partners.</p>
 </div>
 </div>
