sis mobile update

--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -19,7 +19,7 @@ body { padding-top: 100px; }
 </style>
 </head>
 
-<nav class="navbar navbar-default navbar-fixed-top" style="  background-color: #0a304e;">
+<nav class="navbar navbar-default navbar-fixed-top" style="background-color: #0a304e;">
   	<div class="container">
 		<div class="row">
 		<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
@@ -50,7 +50,7 @@ body { padding-top: 100px; }
 <div class="col-md-12 col-sm-12">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h4 class="panel-title">Core Concepts - Video Input Control</h4>
+      <h4 class="panel-title">Present your Documents, Screen, or Video</h4>
     </div>
       <div class="panel-body">
         <ol>
