--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -38,9 +38,8 @@ h3 { padding-top: 20px; }
 <p><strong>Keywords</strong> <br>
 Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 
-<h1>Exchange, Hosted @ Rackspace</h1>
-
-<h2><span style="color:red">VIP Support</span></h2>
+<h1>Exchange, Hosted @ Rackspace<br>
+<small><span style="color:red">VIP Support</span></small></h1>
 <p>ITS supports hosted Exchange service used by the President's office. Any ticket (except an outage) that cannot be resolved by an Analyst should be assigned to Deskside (DSS). Also, All callers should be reminded that as a platinum customer, he or she is entitled to request in-person service at any time.</p>
 <p>Escalate all outage reports as described below. A Service Desk Analyst should never contact the vendor or open a vendor support ticket for any reason.</p>
 
