add headline prez

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -45,6 +45,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 
 <h3>Troubleshoot</h3>
   <p><a href="#lost-password">Reset a Lost Password</a><br>
+  <a href="#webmail">No access to client (e.g., access to webmail)</a><br>
   <a href="#spam">Questions Concerning Spam</a><br>
   <a href="#missing-email">Undelivered or Missing Messages</a><br>
   <a href="#storage">Storage, Archiving or Quotas</a><br>
@@ -167,6 +168,20 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
     <li>User should then log into Control Panel and repeat steps above to change temporary password.</li>
   </ol>
   </div>
+
+  <h3 id="webmail">No access to client (e.g., access to webmail)</h3>
+  <p>back to <a href="#">top</a> </p>
+  <p>If the user loses access to his or he mail client, or for whatever reason can't access email using a mobile device, mail and calendar are available using webmail (i.e., OWA).</p> 
+  <p><mark>Important</mark> Providing instructions to access webmail is NOT a resolution. Full service must be restored prior to resolving ticket.</p>
+
+  <ol>
+    <li>Verify user identity.</li>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Open <a href="apps.rackspace.com">apps.rackspace.com</a> in an internet browser.</li>
+    <li>Type email address and password.</li>
+    <li>Sign in for access to webmail and calendar.</li>
+    <li>Assign ticket to <strong>DSS</strong> for correct ticket routing.</li>
+  </ol> 
 
   <h3 id="spam">Questions Concerning Spam</h3>
   <p>back to <a href="#">top</a> </p>
