add headline prez

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -180,6 +180,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
     <li>Open <a href="apps.rackspace.com">apps.rackspace.com</a> in an internet browser.</li>
     <li>Type email address and password.</li>
     <li>Sign in for access to webmail and calendar.</li>
+    <li>If user cannot access webmail, escalate outage ticket immediately.</li>
     <li>Assign ticket to <strong>DSS</strong> for correct ticket routing.</li>
   </ol> 
 
@@ -660,22 +661,29 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <ol>  
   <li>Verify user identity.</li>
   <li>Gather resolution information and enter it into the ticket.</li>
-  <li>If after hours, escalate through per the following sequence:<br>
-
-  <div class="well well-sm">
-    <ol>
-      <li><p><strong>Jeremy Cole</strong><br> 
-        Cell: (440) 477-2232<br>
-        Google Voice: (440) 296-9250</p></li>
-      <li><p><strong>Stan Kusper</strong><br>
-        Cell: (216) 470-9962</p></li>
-      <li><p><strong>Dave Uhrin</strong><br>
-        Cell: (216) 212-9207</p></li>
-      <li><p><strong>Paul Kalanish</strong><br> 
-        Cell: (216) 338-1986</p></li>
-      </ol>
-    </div>
-    </li>
+  <li>Attempt to access webmail.
+    <p>
+      <div class="well">
+        <ol>
+          <li>Open <a href="apps.rackspace.com">apps.rackspace.com</a> in an internet browser.</li>
+          <li>Type email address and password.</li>
+          <li>Sign in for access to webmail and calendar.</li>
+        </ol>
+      </div></p></li>
+  <li>If after hours, escalate through per the following sequence:
+    <p>
+      <div class="well well-sm">
+        <ol>
+          <li><p><strong>Jeremy Cole</strong><br> 
+          Cell: (440) 477-2232<br>
+          Google Voice: (440) 296-9250</p></li>
+          <li><p><strong>Stan Kusper</strong><br>
+          Cell: (216) 470-9962</p></li>
+          <li><p><strong>Dave Uhrin</strong><br>
+          Cell: (216) 212-9207</p></li>
+          <li><p><strong>Paul Kalanish</strong><br> 
+          Cell: (216) 338-1986</p></li>
+      </ol></div></p></li>
   <li>If business hours, escalate using <a href="#how-te-escalate">normal daytime contacts.</a></li>
     
 <hr>
