--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <title>Video Input Control Panel - Quick Start Guide</title>
+ <title>Instructions - Video Input Control Panel</title>
 
 <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <script src="/bootstrap/js/bootstrap.min.js"></script>
@@ -22,12 +22,8 @@ body { padding-top: 100px; }
 <nav class="navbar navbar-default navbar-fixed-top" style="background-color: #0a304e;">
   	<div class="container">
 		<div class="row">
-		<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-			<div class="visible-xs visible-sm hidden-md hidden-lg">
-				<h1 style="color: white">Video Input <small style="color: #c8d1d7">Quick Start Guide</small></h1></div>
-			<div class="hidden-xs hidden-sm visible-md visible-lg">
-				<h1 style="color: white">Video Input Control Panel 
-				<small style="color: #c8d1d7">Quick Start Guide</small></h1></div>
+		<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">>
+				<h1 style="color: white">Video Input Control Panel</h1></div>
 		</div>
 		</div>
  	</div>
