--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -36,7 +36,7 @@ h3 { padding-top: 20px; }
 <p>Applications | External applications | Exchange, hosted by Rackspace</p>
 
 <p><strong>Keywords</strong> <br>
-Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
+Rackspace; Email; Calendar; Shared Contacts; Exchange; Outlook; President; Provost; VIP; Platinum</p>
 
 <h1>Exchange, Hosted @ Rackspace<br>
 <small><span style="color:red">VIP Support</span></small></h1>
