last edit for this

--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -60,6 +60,7 @@ body { padding-top: 100px; }
             <p>Controls for some devices, e.g. document camera and Apple TV, may be accessed using the icon in the lower left corner of the control panel.</p>
             </div> 
           </li>
+          <li>To 'mute the projector', tap the control for the front projector(s) or video display(s). Tap it again restart video. <br><mark>Important</mark> - Muting a display does not pause input recording.</li>
           <li>To turn the room off, find the control labeled <strong>Quit/Shutdown</strong> and drag it to "all displays".</li>
           <p>&nbsp;</p>
             <div class="row">
