--- a/scripts/webex_fullsupport_draft.html
+++ b/scripts/webex_fullsupport_draft.html
@@ -108,7 +108,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
 
 <h2>Troubleshoot + Repair</h2>
 
-  <h3 id="no-one-joining">No one joining your meeting</a><br>
+  <h3 id="no-one-joining">No one joining your meeting</h3>
   <p>back to <a href="#">top</a> </p>
 
    <ol>
@@ -119,7 +119,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
     <li>Resolve ticket.</li>
   </ol>
       
-  <h3 id="no-log-in">Participant can't log in</a><br>
+  <h3 id="no-log-in">Participant can't log in</h3>
   <p>back to <a href="#">top</a> </p>
 
    <ol>
@@ -129,7 +129,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
     <li>Resolve ticket.</li>
   </ol>
   
-  <h3 id="session-srt">WebEx session loads slowly</a><br>
+  <h3 id="session-srt">WebEx session loads slowly</h3>
   <p>back to <a href="#">top</a> </p>
 
    <ol>
@@ -141,7 +141,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
     <li>Resolve ticket.</li>
   </ol>
   
-  <h3 id="conf-disconnect">Participant's teleconference disconnects</a><br>
+  <h3 id="conf-disconnect">Participant's teleconference disconnects</h3>
   <p>back to <a href="#">top</a> </p>
 
    <ol>
@@ -150,7 +150,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
     <li>Resolve ticket.</li>
   </ol>
   
-  <h3 id="browser-crash">Your browser crashes (host)</a><br>
+  <h3 id="browser-crash">Your browser crashes (host)</h3>
   <p>back to <a href="#">top</a> </p>
 
    <ol>
@@ -161,7 +161,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
     <li>Resolve ticket.</li>
   </ol>
   
-  <h3 id="hold-music">You are hearing hold music</a><br>
+  <h3 id="hold-music">You are hearing hold music</h3>
   <p>back to <a href="#">top</a> </p>
 
    <ol>
@@ -172,7 +172,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
     <li>Resolve ticket.</li>
   </ol>
   
-  <h3 id="no-audio">Participant's cannot hear one another</a></p>
+  <h3 id="no-audio">Participant's cannot hear one another</h3>
   <p>back to <a href="#">top</a> </p>
 
    <ol>
@@ -185,7 +185,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
 
 <h2>Activate + Setup + Install</h2>
 
-  <h3 id="no-audio">Participants cannot hear one another</a></p>
+  <h3 id="no-audio">Participants cannot hear one another</h3>
   <p>back to <a href="#">top</a> </p>
 
    <ol>
@@ -202,7 +202,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
 
 <h2>How-to + Training</h2>
 
-  <h3 id="no-audio">Participants cannot hear one another</a></p>
+  <h3 id="no-audio">Participants cannot hear one another</h3>
   <p>back to <a href="#">top</a> </p>
 
    <ol>
@@ -213,7 +213,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
     <li>Resolve ticket.</li>
   </ol>
 
-    <h3 id="no-audio">Participants cannot hear one another</a></p>
+    <h3 id="no-audio">Participants cannot hear one another</h3>
   <p>back to <a href="#">top</a> </p>
 
    <ol>
