webex full support draft

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -76,7 +76,7 @@ Rackspace; Email; Calendar; Shared Contacts; Exchange; Outlook; President; Provo
 <hr>
 <h2 id="tools-for-resolution">Tools for Resolution</h2>
 <h3 id="required-information">Required Information</h3>
-<p>For best expereience, verify (1) user identity (should appear on <a href="#users">authorized list</a>) and (2) user device type <mark>before</mark> rendering service.</p>
+<p>For best experience, verify (1) user identity (should appear on <a href="#users">authorized list</a>) and (2) user device type <mark>before</mark> rendering service.</p>
 
 <ul>
   <li>Name</li>
