--- a/scripts/webex_fullsupport_draft.html
+++ b/scripts/webex_fullsupport_draft.html
@@ -67,7 +67,6 @@ WebEx; Online meetings; Technical issues; Cisco</p>
 <hr>
 <h2 id="tools-for-resolution">Tools for Resolution</h2>
 <h3 id="required-information">Required Information</h3>
-<p>For best expereience, verify (1) user identity (should appear on <a href="#users">authorized list</a>) and (2) user device type <mark>before</mark> rendering service.</p>
 
 <ul>
   <li>Name</li>
@@ -80,11 +79,11 @@ WebEx; Online meetings; Technical issues; Cisco</p>
 <h3 id="resolver-groups">Resolver Groups</h3>
 
 <div class="well well-sm">
-<p><strong>Deskside Support (DSS)</strong> is available from 9 AM-5 PM, M-F.</p>
+<p><strong>WebEx Support</strong> is available from 9 AM-5 PM, M-F, or as scheduled for event support.</p>
 </div>
 
 <h2 id="how-to-escalate">How to Escalate</h2>
-<p><mark>Exchange (hosted at Rackspace)</mark> is not considered a critical service. However, because this service is only offered to VIP customers, all incidents receive high-priority treatment.</p>
+<p><mark>WebEx</mark> is not considered a critical service. However, this service is offered to VIP, Platinum and Standard SLA customers. Take care to ensure that all incidents reported by VIP or Platinum customers receive appropriate treatment.</p>
 <p>Escalations are available whenever requested, including during planned university closures and recognized holidays. During unplanned university closures escalations may NOT be available.</p>
 
 <h3>Who to Call <a href="http://punnitimages.s3-website-us-east-1.amazonaws.com/KVe.gif"><span style="color:white">HERE</span></a></h3>
