webex full support draft

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -665,7 +665,7 @@ Rackspace; Email; Calendar; Shared Contacts; Exchange; Outlook; President; Provo
     <p>
       <div class="well">
         <ol>
-          <li>Open <a href="apps.rackspace.com">apps.rackspace.com</a> in an internet browser.</li>
+          <li>Open <a href="http://apps.rackspace.com">apps.rackspace.com</a> in an internet browser.</li>
           <li>Type email address and password.</li>
           <li>Sign in for access to webmail and calendar.</li>
         </ol>
