webex full support draft

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -135,7 +135,6 @@ Rackspace; Email; Calendar; Shared Contacts; Exchange; Outlook; President; Provo
 
 <h2>Troubleshoot + Repair</h2>
 
-
 <h3 id="lost-password">Reset a Lost Password</h3>
   <p>back to <a href="#">top</a> </p>
   <ol>
@@ -170,7 +169,7 @@ Rackspace; Email; Calendar; Shared Contacts; Exchange; Outlook; President; Provo
 
   <h3 id="webmail">No access to client (e.g., access to webmail)</h3>
   <p>back to <a href="#">top</a> </p>
-  <p>If the user loses access to his or he mail client, or for whatever reason can't access email using a mobile device, mail and calendar are available using webmail (i.e., OWA).</p> 
+  <p>If the user loses access to his or her mail client, or for whatever reason can't access email using a mobile device, mail and calendar are available using webmail (i.e., OWA).</p> 
   <p><mark>Important</mark> Providing instructions to access webmail is NOT a resolution. Full service must be restored prior to resolving ticket.</p>
 
   <ol>
