webex full support draft

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -456,7 +456,7 @@ Rackspace; Email; Calendar; Shared Contacts; Exchange; Outlook; President; Provo
 </ol>
 
 
-<h3 id="apple-macmail">Mac Mail</h3>
+<h3 id="apple-macmail">Apple Mail</h3>
   <p>back to <a href="#">top</a> </p>
   <p>Set up Apple Mail with Hosted Exchange mailbox.</p>
 
