--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -45,6 +45,7 @@ Rackspace; Email; Calendar; Shared Contacts; Exchange; Outlook; President; Provo
 
 <h3>Troubleshoot</h3>
   <p><a href="#lost-password">Reset a Lost Password</a><br>
+  <a href="#status">Check service status</a><br>
   <a href="#webmail">No access to client (e.g., access to webmail)</a><br>
   <a href="#spam">Questions Concerning Spam</a><br>
   <a href="#missing-email">Undelivered or Missing Messages</a><br>
@@ -167,6 +168,12 @@ Rackspace; Email; Calendar; Shared Contacts; Exchange; Outlook; President; Provo
   </ol>
   </div>
 
+
+  <h3 id="status">Check service status</h3>
+  <p>back to <a href="#">top</a> </p>
+
+  <p>To check service status, open a web browser and type in <a href="http://status.apps.rackspace.com">status.apps.rackspace.com</a>. Down reports should be escalated immediately for additional investiation.</p>
+
   <h3 id="webmail">No access to client (e.g., access to webmail)</h3>
   <p>back to <a href="#">top</a> </p>
   <p>If the user loses access to his or her mail client, or for whatever reason can't access email using a mobile device, mail and calendar are available using webmail (i.e., OWA).</p> 
@@ -175,6 +182,7 @@ Rackspace; Email; Calendar; Shared Contacts; Exchange; Outlook; President; Provo
   <ol>
     <li>Verify user identity.</li>
     <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Check service status at <a href="http://status.apps.rackspace.com">status.apps.rackspace.com</a>.</li>
     <li>Open <a href="apps.rackspace.com">apps.rackspace.com</a> in an internet browser.</li>
     <li>Type email address and password.</li>
     <li>Sign in for access to webmail and calendar.</li>
@@ -197,6 +205,7 @@ Rackspace; Email; Calendar; Shared Contacts; Exchange; Outlook; President; Provo
   <ol>
     <li>Verify user identity.</li>
     <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Check service status at <a href="http://status.apps.rackspace.com">status.apps.rackspace.com</a>.</li>
     <li>Determine whether missing message is shown in "Trash" or "Spam" folder.</li>
     <li>Gather any available detail about the sender and expected time of receipt.</li>
     <li>Assign ticket to <strong>DSS</strong>.</li>
@@ -659,6 +668,7 @@ Rackspace; Email; Calendar; Shared Contacts; Exchange; Outlook; President; Provo
 <ol>  
   <li>Verify user identity.</li>
   <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Check service status at <a href="http://status.apps.rackspace.com">status.apps.rackspace.com</a>.</li>
   <li>Attempt to access webmail.
     <p>
       <div class="well">
