webex full support draft

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -183,7 +183,7 @@ Rackspace; Email; Calendar; Shared Contacts; Exchange; Outlook; President; Provo
     <li>Verify user identity.</li>
     <li>Gather resolution information and enter it into the ticket.</li>
     <li>Check service status at <a href="http://status.apps.rackspace.com">status.apps.rackspace.com</a>.</li>
-    <li>Open <a href="apps.rackspace.com">apps.rackspace.com</a> in an internet browser.</li>
+    <li>Open <a href="http://apps.rackspace.com">apps.rackspace.com</a> in an internet browser.</li>
     <li>Type email address and password.</li>
     <li>Sign in for access to webmail and calendar.</li>
     <li>If user cannot access webmail, escalate outage ticket immediately.</li>
