webex full support draft

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -41,7 +41,7 @@ Rackspace; Email; Calendar; Shared Contacts; Exchange; Outlook; President; Provo
 <h1>Exchange, Hosted @ Rackspace<br>
 <small><span style="color:red">VIP Support</span></small></h1>
 <p>ITS supports hosted Exchange service used by the President's office. Any ticket (except an outage) that cannot be resolved by an Analyst should be assigned to Deskside (DSS). Also, All callers should be reminded that as a platinum customer, he or she is entitled to request in-person service at any time.</p>
-<p>Escalate all outage reports as described below. A Service Desk Analyst should never contact the vendor or open a vendor support ticket for any reason.</p>
+<p>Escalate all outage reports as described below. All non-escalated tickets should be set to priority <mark>P2</mark> by default. A Service Desk Analyst should never contact the vendor or open a vendor support ticket for any reason.</p>
 
 <h3>Troubleshoot</h3>
   <p><a href="#lost-password">Reset a Lost Password</a><br>
