--- a/scripts/IPT-draft.html
+++ b/scripts/IPT-draft.html
@@ -97,7 +97,7 @@ IPT; Intern placement tracking; MSASS; Password reset; Password; Reset</p>
           <strong>Password:</strong> *******<br></li>
           <li>
           <strong>Organization:</strong> msass<br>
-          <strong>Login Name:</strong> *******<br>d
+          <strong>Login Name:</strong> *******<br>
           <strong>Password:</strong> *******<br></li>
       </ul>
     </li>
@@ -116,8 +116,8 @@ IPT; Intern placement tracking; MSASS; Password reset; Password; Reset</p>
   <p>back to <a href="#">top</a> </p>
   <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
-    <li>Login URL: </li>
-    <li>Developer URL: </li>
+    <li>Login URL: <a href="https://www.alceasoftware.com/web/login.php">https://www.alceasoftware.com/web/login.php</a></li>
+    <li>Developer URL: <a href="https://www.alceasoftware.com/">https://www.alceasoftware.com</li>
     <li>Resolve ticket.</li>
 
 <h3 id="field">Questions Related to Field Experience</h3>
