webex full support draft

--- a/scripts/IPT-draft.html
+++ b/scripts/IPT-draft.html
@@ -117,8 +117,9 @@ IPT; Intern placement tracking; MSASS; Password reset; Password; Reset</p>
   <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
     <li>Login URL: <a href="https://www.alceasoftware.com/web/login.php">https://www.alceasoftware.com/web/login.php</a></li>
-    <li>Developer URL: <a href="https://www.alceasoftware.com/">https://www.alceasoftware.com</li>
+    <li>Developer URL: <a href="https://www.alceasoftware.com/">https://www.alceasoftware.com</a></li>
     <li>Resolve ticket.</li>
+  </ol>
 
 <h3 id="field">Questions Related to Field Experience</h3>
   <p>back to <a href="#">top</a> </p>
